refactor: исправить обработку статусов бронирования и маппинг комментариев